--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Streetfighter</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
 </head>
 <body>
 	<div class="main">
@@ -20,12 +22,22 @@
 			</div>
 			<div class="hadouken">
 				
+			</div>
+			<div class="cool">
+				
 			</div>			
 		</div>
-		
+		<div class="rules">
+		<h3>Make Ryu ready to fight!</h3>		
+		</div>
+		<div class="rules2">
+			<p>mouse over to warm him up</p>
+			<p>click to HADOUKEN!!!</p>
+			<p>Press "x" for dramatic violin</p>
+		 </div>
 	</div>
-
-
+	<audio id="hadouken-sound" src="sound/hadouken.mp3">
+	<audio id="careless" src="sound/take-flight.m4a">
 	
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
